// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Component Link renders external link with tooltip 1`] = `
<div>
  <div
    class="container"
  >
    <a
      href="http://www.link.com"
      rel="noreferrer"
      target="_blank"
    >
      TEXT
      <div>
        TOOLTIP
      </div>
    </a>
    <i
      class="icon icon"
      icon="fal,external-link"
    />
  </div>
</div>
`;

exports[`Link Component Link renders internal link 1`] = `
<div>
  <div
    class="container"
  >
    <a
      href="/link"
    >
      TEXT
    </a>
  </div>
</div>
`;
